[project]
name = "InMemCache"
version = "1.0.1"
authors = [
  { name="Anand Jee Choubey", email="anandjechoubey@gmail.com" },
]
description = "A thread safe Python library for in-memory caching with multiple eviction policies"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Anandjeechoubey/InMemCache"
Issues = "https://github.com/Anandjeechoubey/InMemCache/issues"